# otimizacao-grasp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
formulação/: formalizaçãomat.odr.odt
glpk/: definição  execute.py  execute_no_top.py  final.glpk  final.sol  output.out  p_hat1.sol  sol.osol  test.data  wpmaxsat.glpk  wpmaxsat.mod  wpmaxsat_new.mod
glpk/old/: wpmaxsat.mod  wpmaxsat_alternativa.mod  wpmaxsat_new.mod  wpmaxsat_old.mod
glpk/outputs/: notopMANN_a45.clq.wcnf  notophamming10-2.clq.wcnf  notophamming8-2.clq.wcnf  notopjohnson8-4-4.clq.wcnf  notopp_hat1000-1.clq.wcnf  notopp_hat1000-2.clq.wcnf  notopp_hat1000-3.clq.wcnf  notoptest2.wcnf  notopteste  notopteste_johson.wcnf
glpk/solutions/: MANN_a45.clq.wcnf.sol  hamming10-2.clq.wcnf.sol  hamming8-2.clq.wcnf.sol  johnson8-4-4.clq.wcnf.sol  p_hat1000-1.clq.wcnf.sol  p_hat1000-2.clq.wcnf.sol  p_hat1000-3.clq.wcnf.sol  test2.wcnf.sol  teste.sol  teste_johson.wcnf.sol
glpk/solutions_no_top/: MANN_a45.clq.wcnf.sol  hamming10-2.clq.wcnf.sol  hamming8-2.clq.wcnf.sol  johnson8-4-4.clq.wcnf.sol  p_hat1000-1.clq.wcnf.sol  p_hat1000-2.clq.wcnf.sol  p_hat1000-3.clq.wcnf.sol  test2.wcnf.sol  teste.sol  teste_johson.wcnf.sol
grasp/: CMakeLists.txt  grasp.h  grasp.kdev4  leonardo_random_comum  pseudo_codigo_sol_construction.txt  wpmaxsat.h
grasp/.kdev4/: _custom.kdev4  grasp.kdev4
grasp/include/: grasp.h  wpmaxsat.h
grasp/src/: .wpmaxsat.cpp.kate-swp  main.cpp  wpmaxsat.cpp
instances/: glpk_file_generator.py  glpk_file_generator_no_top.py
instances/glpk/: MANN_a45.clq.wcnf  hamming10-2.clq.wcnf  teste  (+7 more)
(+13 files in other folders)
